fix: inconsistency between dark mode and light mode

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -351,7 +351,7 @@ body {
     }
 
     .bottom a {
-        color: var(--gray-800)
+        color: var(--gray-700)
     }
 
     .navbar a, a {
